# BST

./: .gitignore  CMakeLists.txt  run.sh
include/: bst.h
src/: bst.c  driver.c
